mass hyperparameter optimization with p12 results

--- a/swec.ipynb
+++ b/swec.ipynb
@@ -137,6 +137,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def tune(subject_path, device, dtype):\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "source": [
     "def copy_subject(src, dst):\r\n",
@@ -181,8 +190,8 @@
     "from scipy.signal import stft\r\n",
     "subject_path = './swec/' + subject + '/' + subject\r\n",
     "seq_duration = 5\r\n",
-    "sph = 300\r\n",
-    "pil = 3600\r\n",
+    "sph = 0\r\n",
+    "pil = 1800\r\n",
     "distance = 3600 * 24 * 0\r\n",
     "ds = 10\r\n",
     "\r\n",
